# mcini2at

./: CMakeLists.txt
batch/: batch_run.sh  run.sh
src/: calculate.cc  convert.cc  converter.cc  converter.h  cut_equal_bins.cc  multiplicity.cc  multiplicity.h
